data/derived/comb/progs/unify/prog0533.ml.out
Characters 46-67:
  let (l, r) = additivePersAndRoot n in
               ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> int * int
       but an expression was expected of type 'a * 'b
